--- a/main.css
+++ b/main.css
@@ -624,9 +624,9 @@ h2 {
     .projectSectionTitle{
         max-width: 65vw;
     }
-    /* #bottomIcons{
+    .bottomIconsHome{
         display: none;
-    } */
+    }
     #leftIcons{
         position: fixed;
         opacity: 0;
